CHANGELOG RoundCube Webmail
---------------------------

2009/02/08 (alec)
----------
- Fix "value continuation" MIME headers by adding required semicolon (#1485727)

2009/02/06 (alec)
----------
- Fix pressing select all/unread multiple times (#1485723)
- Fix selecting all unread does not honor new messages (#1485724)
- Fix some base64 encoded attachments handling (#1485725)

2009/02/05 (alec)
----------
- Support NGINX as IMAP backend: better BAD response handling (#1485720)

2009/02/04 (alec)
----------
- performance fix: don't fetch attachment parts headers twice to parse filename

2009/02/02 (alec)
----------
- Fix checking for recent messages on various IMAP servers (#1485702)
- performance fix: Don't fetch quota and recent messages in "message view" mode
- Fix displaying of alternative-inside-alternative messages (#1485713)

2009/01/28 (alec)
----------
- Fix MDNSent flag checking, use arbitrary keywords (asterisk) flag (#1485706)

2009/01/23 (alec)
----------
- Fix creation of folders with '&' sign in name
- Fix parsing of email addresses without angle brackets (#1485693)
- Save spellcheck corrections when switching from plain to html editor (and spellchecking is on)
- Fix large search results on server without SORT capability (#1485668)

2009/01/22 (thomasb)
----------
- Get rid of preg_replace() with eval modifier and create_function usage (#1485686)
- Bring back <base> and <link> tags in HTML messages

2009/01/20 (thomasb)
----------
- Fix XSS vulnerability through background attributes as reported by Julien Cayssol

2009/01/18 (alec)
----------
- Fix problems with backslash as IMAP hierarchy delimiter (#1484467)
- Secure vcard export by getting rid of preg's 'e' modifier use (#1485689)
- Fix authentication when submitting form with existing session (#1485679)

2009/01/15 (alec)
----------
- Allow absolute URLs to images in HTML messages/sigs (#1485666)
- Fix message body which contains both inline attachments and emotions