@@ -48,6 +48,16 @@ if (!empty($_GET['_frame'])) {
 }
 
 else if ($pid = get_input_value('_part', RCUBE_INPUT_GET)) {
+  // TNEF encoded attachment part
+  if (preg_match('/^winmail\.([0-9.]+)\.([0-9]+)$/', $pid, $nt)) {
+    $pid = $nt[1]; $i = $nt[2];
+    if ($part = $MESSAGE->mime_parts[$pid]) {
+      $tnef_arr = $IMAP->tnef_decode($part, $MESSAGE->uid);
+      if (is_a($tnef_arr[$i], 'rcube_message_part'))
+        $MESSAGE->mime_parts[$pid] = $tnef_arr[$i];
+    }
+  }
+  
   if ($part = $MESSAGE->mime_parts[$pid]) {
     $ctype_primary = strtolower($part->ctype_primary);
     $ctype_secondary = strtolower($part->ctype_secondary);
@@ -98,9 +108,12 @@ else if ($pid = get_input_value('_part', RCUBE_INPUT_GET)) {
       $disposition = !empty($_GET['_download']) ? 'attachment' : 'inline';
       
       header("Content-Disposition: $disposition; filename=\"$filename\"");
-
+      
       // turn off output buffering and print part content
-      $IMAP->get_message_part($MESSAGE->uid, $part->mime_id, $part, true);
+      if ($part->body)
+        echo $part->body;
+      else
+        $IMAP->get_message_part($MESSAGE->uid, $part->mime_id, $part, true);
     }
 
     exit;
